--- a/tests/AdventOfCode.Tests/AdventOfCode.Tests.fsproj
+++ b/tests/AdventOfCode.Tests/AdventOfCode.Tests.fsproj
@@ -9,6 +9,12 @@
   <ItemGroup>
     <Compile Include="Tests.fs" />
     <Compile Include="Program.fs" />
+    <Content Include="2024\Day01_Part1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="2024\Day02_Part1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
