--- a/tests/AdventOfCode.Tests/AdventOfCode.Tests.fsproj
+++ b/tests/AdventOfCode.Tests/AdventOfCode.Tests.fsproj
@@ -15,6 +15,9 @@
     <Content Include="2024\Day02_Part1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="2024\Day03.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
